--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fontsource/merriweather": "^4.5.14",
     "@fontsource/montserrat": "^4.5.14",
     "gatsby": "^5.6.1",
+    "gatsby-omni-font-loader": "^2.0.2",
     "gatsby-plugin-feed": "^5.6.0",
     "gatsby-plugin-image": "^3.6.0",
     "gatsby-plugin-manifest": "^5.6.0",
@@ -25,7 +26,8 @@
     "gatsby-transformer-sharp": "^5.6.0",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "prettier": "^2.8.4"
